--- a/password.html
+++ b/password.html
@@ -4,6 +4,6 @@
 
     <h1>Your password is:</h1>
     <h2 class="alert-success">{{ password }}</h2>
-    <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
+    <a href="{% url 'index' %}" class="btn btn-warning">Index</a>
 
 </div>
