--- a/about.html
+++ b/about.html
@@ -7,5 +7,5 @@
      This Is My First Project
     </h1>
     <br>
-    <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
+    <a href="{% url 'index' %}" class="btn btn-warning">Index</a>
 </div>
